# StockGeniusXAU

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  StockGeniusXAU.mq5  pyproject.toml  requirements-dev.txt  roadmap
.github/workflows/: ci.yml
docs/: data_ingestion.md  signals.md
docs/compliance/: RTS6_checklist.md
docs/execution/: README.md
docs/secrets/: README.md
examples/: send_first_trade.ipynb
scripts/: fetch_data.py
src/xau/: __init__.py
src/xau/config/: __init__.py
src/xau/data/: __init__.py  binance.py  dukascopy.py  schema.py
src/xau/execution/: __init__.py  broker.py  exceptions.py  mt5_client.py
src/xau/risk/: __init__.py
src/xau/signals/: __init__.py  backtest.py  indicators.py  strategy.py
src/xau/utils/: __init__.py  price.py
tests/integration/: test_backtest.py  test_broker_paper.py  test_strategy.py
tests/integration/data/: test_fetch_day.py
tests/unit/: test_indicators.py  test_sanity.py
tests/unit/data/: test_binance.py  test_dukascopy.py
tests/unit/execution/: __init__.py  test_broker.py  test_mt5_client.py
