[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stockgenius-xau"
version = "0.1.0"
description = "Assistant de trading XAU/USD"
authors = [{name = "Equipe StockGenius"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "vectorbt",
    "catboost[gpu]",
    "python-binance",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-vcr",
    "ruff",
    "mypy",
]
mt5 = [
    "MetaTrader5>=5.0.44 ; sys_platform == 'win32' and python_version < '3.12'"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.11"
